@@ -24,7 +24,6 @@ struct _Elm_Naviframe_Smart_Data
    Eina_List            *popping;
    Evas_Object          *dummy_edje;
    Evas_Display_Mode     dispmode;
-   Elm_Object_Item      *compress_it;
 
    Eina_Bool             preserve : 1;
    Eina_Bool             on_deletion : 1;
@@ -45,6 +44,7 @@ struct _Elm_Naviframe_Item
    Evas_Object *title_next_btn;
    Evas_Object *title_icon;
    Ecore_Animator *animator;
+   Evas_Display_Mode     dispmode;
    const char  *style;
    const char  *title_label;
    const char  *subtitle_label;
